--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-preloader-icon": "^1.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
+    "simple-react-validator": "^1.6.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
